# Sapti_AI

./: ARCHITECTURE.md
.github/workflows/: render-backend-heart-beat.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chat.py
backend/app/config/: sapti_personality.yaml
frontend/src/app/(dashboard)/chat/: chat.module.css  page.tsx
